# PacmanReturns

./: .gitignore  Makefile  a.out  cell.cpp  cell.h  dfs_solution.c  main.cpp  map.cpp  map.h  mio.c  some.cpp  some.py  some_solution.c  verga.c
Pacman/: Pacman.sln
Pacman-Arduino-Joystick/pacman/: pacman.ino
Pacman/Pacman/: Agents.cpp  Agents.h  CMakeLists.txt  Makefile  Pacman.vcxproj  Pacman.vcxproj.filters  ShareDefines.h  Utils.h  cell.cpp  cell.h  character.cpp  character.h  graphics.cpp  graphics.h  main.cpp  map.cpp  map.h  verga.txt
Pacman/Pacman/Debug/: vc142.idb
Pacman/Pacman/Debug/Pacman.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Pacman.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Pacman/Pacman/jpeg-6b/: config.status
